# Iron-mem

./: .dockerignore  .gitignore  .mcp.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  HANDOFF_2026-06-26_roadmap_and_storage.md  HANDOFF_2026-07-02_sleep_cycle_autocompress.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  install.ps1  install.sh  make_gif.sh
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  rust.yml
assets/: demo.tape
docs/: operator-os-memory-adapter.md  sleep-cycle-autocompress.md
docs/compliance/: eu-ai-act-mapping.md
docs/plans/: 2026-07-09-memory-graph-workbench-design.md  2026-07-09-memory-graph-workbench.md  2026-07-12-memory-leadership-roadmap.md
docs/superpowers/plans/: 2026-06-05-semantic-foundation.md  2026-06-07-ironmem-ccr-supermemory.md  2026-06-08-ironmem-locomo-improvements.md  2026-06-20-memory-system-next-additions.md
docs/superpowers/specs/: 2026-06-05-semantic-foundation-design.md
hooks/: lib.sh  post-tool-use.sh  session-close.sh  session-end.sh  session-start.sh  stop.sh
nvim/lua/ironmem/: init.lua
scripts/: run_longmemeval.sh  test_claude_hooks.sh
sdk/python/: README.md  pyproject.toml
sdk/python/ironmem/: __init__.py
sdk/typescript/: README.md  package.json
sdk/typescript/src/: index.ts
src/: auto_dream.rs  bench.rs  code_anchor.rs  compliance.rs  compress.rs  config.rs  context.rs  corrections.rs  db.rs  e2e.rs  embedder.rs  embedding_codec.rs  eval.rs  expansion.rs  governance.rs  hooks.rs  main.rs  mcp.rs  metrics.rs  observer.rs  profile.rs  provider.rs  reflection.rs  reranker.rs  retrieval.rs  server.rs  snapshot.rs  storage.rs  strutil.rs  sweep.rs  sync.rs  vectorstore.rs  web_ui.html
src/ccr/: codec.rs  detect.rs  dict.rs  mod.rs  zstd_codec.rs
tests/: mcp_stdio_clean.rs
