[package]
name = "ironmem"
version = "0.1.0"
edition = "2021"
description = "Persistent session memory for Claude Code and other AI coding assistants"
license = "Apache-2.0"
authors = ["ExecLayer Inc."]
repository = "https://github.com/BMC-INC/Iron-mem"
homepage = "https://github.com/BMC-INC/Iron-mem"
readme = "README.md"
keywords = ["ai", "memory", "claude", "coding-assistant", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ironmem"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.8", features = ["json"] }

# MCP protocol
rmcp = { version = "1.4", features = ["server", "transport-io", "transport-streamable-http-server"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "any"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (for Claude API)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
