[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ironmem"
version = "0.1.0"
description = "Python client for IronMem — governed persistent memory for AI agents"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
keywords = ["memory", "ai", "agents", "mcp", "governance"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Homepage = "https://github.com/BMC-INC/Iron-mem"
